erDiagram
    %% RELATIONSHIPS - Define all relationships first
    User ||--o{ MedicalDocument : uploads
    User ||--o{ Visit : has
    User ||--o{ Medication : takes
    User ||--o{ LabResult : receives
    User ||--o{ HealthInsight : receives
    User ||--o{ Message : sends
    User ||--o{ UserProvider : connects_to
    User ||--o{ ScreeningReminder : receives
    
    MedicalDocument ||--o{ DocumentTag : has
    MedicalDocument ||--o| ExtractedMedicalData : contains
    MedicalDocument }o--o| HealthcareProvider : from
    
    Visit ||--o{ Diagnosis : includes
    Visit ||--o| VitalSign : records
    Visit }o--o| HealthcareProvider : with
    
    Medication ||--o{ MedicationAdherence : tracks
    Medication }o--o| HealthcareProvider : prescribed_by
    
    HealthcareProvider ||--o{ UserProvider : connects_to
    
    Message }o--o| User : from
    Message }o--o| HealthcareProvider : to_from
    
    HealthFacility ||--o{ WaitTime : reports
    
    %% ENTITIES - Define all entities with their attributes
    User {
        string id PK
        string email UK
        string passwordHash
        string firstName
        string lastName
        datetime dateOfBirth
        string gender
        string phoneNumber
        string profileImage
        boolean notificationsEnabled
        boolean emailNotifications
        datetime createdAt
        datetime updatedAt
    }
    
    MedicalDocument {
        string id PK
        string userId FK
        string title
        string description
        string fileUrl
        string fileType
        int fileSize
        text ocrText
        boolean ocrProcessed
        float ocrConfidence
        string category
        string specialty
        datetime documentDate
        datetime uploadDate
        string providerId FK
        datetime createdAt
        datetime updatedAt
    }
    
    DocumentTag {
        string id PK
        string documentId FK
        string tagName
        string tagValue
        datetime createdAt
    }
    
    ExtractedMedicalData {
        string id PK
        string documentId FK
        json extractedFields
        string testName
        string testValue
        string referenceRange
        string doctorName
        string clinicName
        datetime createdAt
        datetime updatedAt
    }
    
    Visit {
        string id PK
        string userId FK
        datetime visitDate
        string visitType
        string providerId FK
        string chiefComplaint
        boolean summaryGenerated
        text summary
        string keyFindings
        boolean hasAbnormalFindings
        boolean newMedications
        boolean followUpRequired
        datetime followUpDate
        datetime createdAt
        datetime updatedAt
    }
    
    Diagnosis {
        string id PK
        string visitId FK
        string code
        string name
        string notes
        datetime createdAt
    }
    
    VitalSign {
        string id PK
        string visitId FK
        int bloodPressureSystolic
        int bloodPressureDiastolic
        int heartRate
        float temperature
        float weight
        float height
        int oxygenSaturation
        datetime createdAt
    }
    
    LabResult {
        string id PK
        string userId FK
        string testName
        string testCode
        string resultValue
        string resultUnit
        float referenceMin
        float referenceMax
        boolean isAbnormal
        string flags
        datetime testDate
        string labName
        datetime createdAt
        datetime updatedAt
    }
    
    Medication {
        string id PK
        string userId FK
        string name
        string genericName
        string dosage
        string frequency
        string route
        datetime startDate
        datetime endDate
        boolean isActive
        string prescriberId FK
        int refillsRemaining
        datetime nextRefillDate
        float adherenceRate
        string notes
        datetime createdAt
        datetime updatedAt
    }
    
    MedicationAdherence {
        string id PK
        string medicationId FK
        datetime scheduledDate
        datetime takenDate
        boolean taken
        boolean skipped
        datetime createdAt
    }
    
    HealthInsight {
        string id PK
        string userId FK
        string type
        string title
        text message
        string severity
        string relatedDataType
        string relatedDataId
        boolean isRead
        boolean isDismissed
        datetime createdAt
        datetime updatedAt
    }
    
    ScreeningReminder {
        string id PK
        string userId FK
        string screeningType
        string description
        datetime dueDate
        boolean isCompleted
        datetime completedDate
        boolean reminderSent
        datetime createdAt
        datetime updatedAt
    }
    
    HealthcareProvider {
        string id PK
        string name
        string specialty
        string npi UK
        string email
        string phone
        string faxNumber
        string addressLine1
        string addressLine2
        string city
        string state
        string zipCode
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }
    
    UserProvider {
        string id PK
        string userId FK
        string providerId FK
        string relationship
        boolean isPrimary
        datetime createdAt
    }
    
    Message {
        string id PK
        string senderId FK
        string senderType
        string recipientProviderId FK
        string senderProviderId FK
        string subject
        text body
        boolean isRead
        datetime readAt
        string attachments
        boolean encrypted
        datetime createdAt
        datetime updatedAt
    }
    
    HealthFacility {
        string id PK
        string name
        string facilityType
        string phone
        string email
        string website
        string addressLine1
        string addressLine2
        string city
        string state
        string zipCode
        float latitude
        float longitude
        string services
        json hoursOfOperation
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }
    
    WaitTime {
        string id PK
        string facilityId FK
        int currentWaitMinutes
        int estimatedWaitMinutes
        datetime reportedAt
        string source
        int dayOfWeek
        int hourOfDay
        datetime createdAt
    }
